--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,22 +12,21 @@
 
   <body>
 
-    <header>
-      <div class="container">
-        <a id="a-title" href="{{ '/' | relative_url }}">
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        </a>
-        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
-
-        <section id="downloads">
-          {% if site.show_downloads %}
-            <a href="{{ site.github.zip_url }}" class="btn">Download as .zip</a>
-            <a href="{{ site.github.tar_url }}" class="btn">Download as .tar.gz</a>
-          {% endif %}
-          <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+	<header class="site-header">
+	  <div class="terminal-bar">
+		<div class="terminal-dots">
+		  <span style="background:#ff5f56;"></span>
+		  <span style="background:#ffbd2e;"></span>
+		  <span style="background:#27ca3f;"></span>
+		</div>
+		<div class="terminal-title">guest@fisico-creativo:~</div>
+	  </div>
+	  
+	  <!-- Efecto de texto que escribe (requiere JS) -->
+	  <div class="dynamic-title">
+		<h1 id="typewriter">$ <span class="typed-text"></span><span class="cursor">|</span></h1>
+	  </div>
+	</header>
 
     <div class="container">
       <section id="main_content">
