--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
 		  <span style="background:#ffbd2e;"></span>
 		  <span style="background:#27ca3f;"></span>
 		</div>
-		<div class="terminal-title">guest@fisico-creativo:~</div>
+		<div class="terminal-title">guest@borterion:~</div>
 	  </div>
 	  
 	  <!-- Efecto de texto que escribe (requiere JS) -->
