--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,5 +33,11 @@
         {{ content }}
       </section>
     </div>
+    
+	<script src="{{ '/assets/js/particles.js' | relative_url }}"></script>
+
+
   </body>
+  
+
 </html>
