--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-
+	{%include react-components.html}
 	<header class="site-header">
 	  <div class="terminal-bar">
 		<div class="terminal-dots">
@@ -24,7 +24,7 @@
 	  
 	  <!-- Efecto de texto que escribe (requiere JS) -->
 	  <div class="dynamic-title">
-		<h1 id="typewriter">$ <span class="typed-text"></span><span class="cursor">|</span></h1>
+		<h1 id="typewriter"> >> <span class="typed-text"></span><span class="cursor"></span></h1>
 	  </div>
 	</header>
 
