--- a/_layouts/cloud.html
+++ b/_layouts/cloud.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
 
-{% seo %}
+	{% seo %}
   </head>
 
   <body>
@@ -32,7 +32,7 @@
         {{ content }}
       </section>
     </div>
-    
+    <script src="{{ '/assets/js/DecryptedTextSimple.js' | relative_url }}"></script>
 	<script src="{{ '/assets/js/particles.js' | relative_url }}"></script>
 
 
