--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -8,5 +8,6 @@
 
 <!-- You can set your favicon here -->
 <!--link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
+<link rel="icon" href="{{ "/assets/favicon.ico" | prepend: site.baseurl | prepend: site.url }}">
 
 <!-- end custom head snippets -->
