--- a/_layouts/cloud.html
+++ b/_layouts/cloud.html
@@ -34,7 +34,9 @@
     </div>
     <script src="{{ '/assets/js/DecryptedTextSimple.js' | relative_url }}"></script>
 	<script src="{{ '/assets/js/particles.js' | relative_url }}"></script>
-
+	<script type="text/javascript" async
+	  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+	</script>
 
   </body>
   
