--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -17,7 +17,7 @@ $container-max-width: 1000px;
 body {
   margin: 0;
   padding: 0;
-  background: $body-background url("../images/bg_prin.jpeg") 0 0;
+  background: $body-background url("../images/bg_prin-2.jpeg") 0 0;
   color: $body-foreground;
   font-size: 16px;
   line-height: 1.5;
