--- a/_layouts/default_2.html
+++ b/_layouts/default_2.html
@@ -17,7 +17,14 @@
         <a id="a-title" href="{{ '/' | relative_url }}">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
         </a>
-        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
+    <h2 class="subtitle">
+      {% include decrypted-text.html 
+         text="Físico | Sonificación de Datos | Creative Coder" 
+         speed="20"
+         maxIterations="8"
+         characters="█▓▒░|/\\-"
+         animateOn="view" %}
+      </h2>
 
       </div>
     </header>
