--- a/_layouts/default_2.html
+++ b/_layouts/default_2.html
@@ -35,9 +35,12 @@
       </section>
     </div>
 
-    <script src="{{ '/assets/js/DecryptedTextSimple.js' | relative_url }}"></script>
+  <script src="{{ '/assets/js/DecryptedTextSimple.js' | relative_url }}"></script>
 	<script src="{{ '/assets/js/particles.js' | relative_url }}"></script>
 	<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+  
 
   </body>
 </html>
