--- a/_layouts/default_2.html
+++ b/_layouts/default_2.html
@@ -18,12 +18,7 @@
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
         </a>
     <h2 class="subtitle">
-      {% include decrypted-text.html 
-         text="Físico | Sonificación de Datos | Creative Coder" 
-         speed="20"
-         maxIterations="8"
-         characters="█▓▒░|/\\-"
-         animateOn="view" %}
+      {{ site.description }}
       </h2>
 
       </div>
