--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -339,7 +339,7 @@ a {
 
 /* En tu CSS principal */
 .decrypted-text {
-  --primary-color: #3a86ff;
+  --primary-color: #d96c06;
   --accent-color: #ff006e;
   --terminal-bg: #0a0e14;
   --terminal-text: #e6edf3;
